--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,7 @@
-.App {
-  text-align: center;
+:global {
+  .App {
+    text-align: center;
+  }
 }
 
 .App-logo {
@@ -23,6 +25,11 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
 }
